--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=fakebook
+spring.datasource.url=jdbc:mysql://localhost/fakebook-java
+useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Use to drop then create DB
+#spring.jpa.hibernate.ddl-auto=create
