--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,8 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
       MYSQL_ROOT_PASSWORD: pass
+    volumes:
+      - mysql:/var/lib/mysql
+
+volumes:
+  mysql:
