updates docker to build app

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,13 +1,20 @@
-#FROM openjdk:22-jdk-alpine
+FROM maven:latest AS builder
+
+WORKDIR /usr/src/fakebook
+COPY pom.xml .
+RUN mvn -B dependency:go-offline
+
+COPY . .
+RUN mvn package
 
 FROM alpine/java:22-jdk
+
+WORKDIR /app
+COPY --from=builder /usr/src/fakebook/*.jar .
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
-#ENTRYPOINT ["java","-jar","/app.jar"]
 
-# add entrypoint.sh
 COPY ./entrypoint.sh .
 RUN chmod +x ./entrypoint.sh
 
-# run entrypoint.sh
-ENTRYPOINT ["./entrypoint.sh", "java","-jar","/app.jar"]
+ENTRYPOINT ["./entrypoint.sh", "java","-jar","/app/app.jar"]
