--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=fakebook
-spring.datasource.url=jdbc:mysql://localhost/fakebook-java
+# spring.datasource.url=jdbc:mysql://localhost/fakebook-java
 useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=pass
+# spring.datasource.username=root
+# spring.datasource.password=pass
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Use to drop then create DB
