--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,11 +10,9 @@ RUN mvn package
 FROM alpine/java:22-jdk
 
 WORKDIR /app
-COPY --from=builder /usr/src/fakebook/*.jar .
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+COPY --from=builder /usr/src/fakebook/target/*.jar app.jar
 
 COPY ./entrypoint.sh .
 RUN chmod +x ./entrypoint.sh
 
-ENTRYPOINT ["./entrypoint.sh", "java","-jar","/app/app.jar"]
+ENTRYPOINT ["./entrypoint.sh", "java", "-jar", "app.jar"]
