--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,19 @@
 services:
   app:
+    restart:
+      on-failure
+    # healthcheck:  # Needs a healthcheck
+    #   test: []
+    #   interval: 5s
+    #   timeout: 1s
+    #   retries: 2
+    #   start_period: 10s
     build:
       context: .
       dockerfile: src/Dockerfile
     ports:
       - "8080:8080"
-    depends_on:
+    depends_on:  # Once healthcheck is in place, remove this
       - db
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/fakebook-java?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
@@ -13,7 +21,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: pass
 
   db:
-    image: mysql:latest
+    # image: mysql:latest
     build:
       context: .
       dockerfile: db/Dockerfile
