--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -15,4 +15,5 @@ COPY --from=builder /usr/src/fakebook/target/*.jar app.jar
 COPY ./entrypoint.sh .
 RUN chmod +x ./entrypoint.sh
 
+HEALTHCHECK CMD wget --no-verbose --spider http://localhost:8080/health || exit 1
 ENTRYPOINT ["./entrypoint.sh", "java", "-jar", "/app/app.jar"]
